# enma.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
src/: anime.rs  error.rs  lib.rs  main.rs  manga.rs  util.rs  utils.rs
src/anime/extractors/: mod.rs
src/anime/hianime/: error.rs  mod.rs  types.rs  utils.rs
src/anime/hianime/parsers/: az_list.rs  category.rs  episode_servers.rs  episodes.rs  genre.rs  home_page.rs  info.rs  mod.rs  producer.rs  qtip.rs  schedule.rs  search.rs  search_suggestions.rs  types.rs
src/manga/mangareader/parsers/: mod.rs
