[package]
name = "enma"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Ritesh Ghosh ghoshritesh55@gmail.com"]
homepage = "https://github.com/DaioEnma/enma.rs"
repository = "https://github.com/DaioEnma/enma.rs"
description = "Rust crate that provides high-level APIs to obtain information on anime and manga."
keywords = ["anime", "manga", "rust", "scraper", "otaku"]
categories = ["text-processing", "web-programming"]

[dependencies]
once_cell = "1.20.2"
reqwest = { version = "0.12.12", features = [
  "brotli",
  "deflate",
  "gzip",
  "json",
] }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
