[package]
name = "enma"
version = "0.9.3"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Ritesh Ghosh <ghoshritesh55@gmail.com>"]
homepage = "https://lib.rs/enma"
repository = "https://github.com/DaioEnma/enma.rs"
description = "A crate serving anime and manga information 📦"
keywords = ["anime", "manga", "rust", "scraper", "otaku"]
categories = ["text-processing", "web-programming"]

[dependencies]
chrono = "0.4.39"
once_cell = "1.20.2"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = [
  "brotli",
  "deflate",
  "gzip",
  "json",
] }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
